--- a/vercel.json
+++ b/vercel.json
@@ -1,30 +1,22 @@
-
 {
   "version": 2,
   "builds": [
     {
-      "src": "server/index.js",
-      "use": "@vercel/node",
+      "src": "package.json",
+      "use": "@vercel/static-build",
       "config": {
-        "includeFiles": ["dist/**", "renderer/**", "server/**", "package.json"]
+        "distDir": "dist/client" 
       }
+    },
+    {
+      "src": "server/index.cjs", 
+      "use": "@vercel/node"
     }
   ],
   "routes": [
     {
-      "src": "/assets/(.*)",
-      "dest": "/dist/client/assets/$1"
-    },
-    {
-      "src": "/favicon.ico",
-      "dest": "/dist/client/favicon.ico"
-    },
-    {
-      "handle": "filesystem"
-    },
-    {
       "src": "/(.*)",
-      "dest": "/server/index.js"
+      "dest": "server/index.cjs" 
     }
   ],
   "env": {
